# gtkd-meson

./: .gitignore  README.md  meson.build
src/: glob.py  meson.build
src/adw/: meson.build
src/atk/: meson.build
src/cairo/: meson.build
src/gdk/: meson.build
src/gdkpixbuf/: meson.build
src/gio/: meson.build
src/glib/: meson.build
src/gobject/: meson.build
src/graphene/: meson.build
src/gsk/: meson.build
src/gthread/: meson.build
src/gtk/: meson.build
src/harfbuzz/: meson.build
src/linker/: meson.build
src/pango/: meson.build
src/rsvg/: meson.build
src/shumate/: meson.build
src/soup/: meson.build
src/sourceview/: meson.build
