install_data(['SwipeableIF.d', 'PreferencesPage.d', 'HeaderBar.d', 'AnimationTarget.d', 'TabView.d', 'Application.d', 'CarouselIndicatorDots.d', 'Window.d', 'ViewSwitcher.d', 'EnumListModel.d', 'ViewSwitcherBar.d', 'WindowTitle.d', 'CallbackAnimationTarget.d', 'Carousel.d', 'TabBar.d', 'SplitButton.d', 'PreferencesGroup.d', 'LeafletPage.d', 'ViewStackPage.d', 'TabPage.d', 'StatusPage.d', 'ClampScrollable.d', 'StyleManager.d', 'SwipeableT.d', 'ExpanderRow.d', 'SpringAnimation.d', 'Toast.d', 'ComboRow.d', 'Animation.d', 'ViewSwitcherTitle.d', 'ActionRow.d', 'Squeezer.d', 'PreferencesRow.d', 'Flap.d', 'Clamp.d', 'SpringParams.d', 'ButtonContent.d', 'ToastOverlay.d', 'SwipeTracker.d', 'Leaflet.d', 'PreferencesWindow.d', 'Avatar.d', 'ClampLayout.d', 'ViewStack.d', 'SqueezerPage.d', 'CarouselIndicatorLines.d', 'TimedAnimation.d', 'EnumListItem.d', 'Bin.d', 'ApplicationWindow.d', 'c/types.d', 'c/functions.d'], install_dir: 'include/d/gtk_d')