install_data(['StateSet.d', 'ObjectFactory.d', 'Registry.d', 'TableIF.d', 'WindowIF.d', 'NoOpObject.d', 'ComponentIF.d', 'ImplementorT.d', 'ValueT.d', 'TextT.d', 'ActionIF.d', 'SelectionIF.d', 'StreamableContentT.d', 'ComponentT.d', 'ActionT.d', 'State.d', 'EditableTextIF.d', 'TableCellIF.d', 'Version.d', 'TextIF.d', 'SelectionT.d', 'Hyperlink.d', 'GObjectAccessible.d', 'ValueIF.d', 'TableT.d', 'TableCellT.d', 'TextRange.d', 'Socket.d', 'HypertextIF.d', 'HyperlinkImplIF.d', 'ImageT.d', 'ImplementorIF.d', 'Range.d', 'ObjectAtk.d', 'EditableTextT.d', 'HyperlinkImplT.d', 'StreamableContentIF.d', 'WindowT.d', 'Util.d', 'Misc.d', 'HypertextT.d', 'Relation.d', 'Rectangle.d', 'NoOpObjectFactory.d', 'RelationSet.d', 'Plug.d', 'ImageIF.d', 'DocumentIF.d', 'DocumentT.d', 'c/types.d', 'c/functions.d'], install_dir: 'include/d/gtk_d')