glib_files = files(['FontOption.d', 'ScriptSurface.d', 'Pattern.d', 'RasterSource.d', 'Version.d', 'Types.d', 'Surface.d', 'RecordingSurface.d', 'Script.d', 'MeshPattern.d', 'ImageSurface.d', 'Region.d', 'PostScriptSurface.d', 'PdfSurface.d', 'Device.d', 'Matrix.d', 'Context.d', 'ScaledFont.d', 'Status.d', 'UserFontFace.d', 'FontFace.d', 'SvgSurface'), install_dir: 'include/d/gtk_d'