install_data(['Closure.d', 'Signals.d', 'ValueArray.d', 'CClosure.d', 'SignalGroup.d', 'Boxed.d', 'BindingGroup.d', 'ParamSpec.d', 'TypeModule.d', 'Type.d', 'DClosure.d', 'TypeValueTable.d', 'TypeClass.d', 'TypePluginIF.d', 'Value.d', 'ObjectClass.d', 'WeakRef.d', 'Binding.d', 'Enums.d', 'Flags.d', 'ObjectG.d', 'TypeInterface.d', 'ParamSpecPool.d', 'TypeInstance.d', 'TypePluginT.d', 'c/types.d', 'c/functions.d'], install_dir: 'include/d/gtk_d')