install_data(['ShaderArgsBuilder.d', 'GLShaderNode.d', 'GLRenderer.d', 'ContainerNode.d', 'OpacityNode.d', 'Transform.d', 'NglRenderer.d', 'BlurNode.d', 'ClipNode.d', 'RepeatingLinearGradientNode.d', 'RadialGradientNode.d', 'ColorMatrixNode.d', 'CairoNode.d', 'ConicGradientNode.d', 'TextNode.d', 'ColorNode.d', 'TransformNode.d', 'RepeatNode.d', 'RepeatingRadialGradientNode.d', 'DebugNode.d', 'CairoRenderer.d', 'BroadwayRenderer.d', 'RoundedRect.d', 'BlendNode.d', 'Renderer.d', 'InsetShadowNode.d', 'LinearGradientNode.d', 'ShadowNode.d', 'TextureNode.d', 'CrossFadeNode.d', 'RoundedClipNode.d', 'GLShader.d', 'BorderNode.d', 'RenderNode.d', 'OutsetShadowNode.d', 'c/types.d', 'c/functions.d'], install_dir: 'include/d/gtk_d')