install_data(['segment_properties_t.d', 'user_data_key_t.d', 'unicode_funcs_t.d', 'buffer_t.d', 'map_t.d', 'glyph_info_t.d', 'ot_math_glyph_variant_t.d', 'feature_t.d', 'glyph_position_t.d', 'blob_t.d', 'shape_plan_t.d', 'variation_t.d', 'draw_funcs_t.d', 'ot_math_glyph_part_t.d', 'language_t.d', 'set_t.d', 'font_t.d', 'face_t.d', 'font_funcs_t.d', 'c/types.d', 'c/functions.d'], install_dir: 'include/d/gtk_d')