install_data(['PgAttributeSize.d', 'PgLayoutLine.d', 'PgColor.d', 'PgVertical.d', 'PgAttributeLanguage.d', 'PgCairoFontMap.d', 'PgFontFace.d', 'PgItem.d', 'PgFontFamily.d', 'PgFontDescription.d', 'PgAttributeList.d', 'PgContext.d', 'PgFontMetrics.d', 'PgScriptIter.d', 'PgAttributeIterator.d', 'PgLayoutIter.d', 'PgGlyphItemIter.d', 'PgAttributeShape.d', 'PgFontsetSimple.d', 'PgCoverage.d', 'PgScript.d', 'PgFont.d', 'PgLanguage.d', 'PgFontset.d', 'PgGlyphItem.d', 'PgVersion.d', 'PgRenderer.d', 'PgCairo.d', 'PgMiscellaneous.d', 'PgAttributeFontDesc.d', 'PgFontMap.d', 'PgLayout.d', 'PgTabArray.d', 'PgAttribute.d', 'PgGlyphString.d', 'PgMatrix.d', 'c/types.d', 'c/functions.d'], install_dir: 'include/d/gtk_d')