install_data(['MapLayer.d', 'FileCache.d', 'Coordinate.d', 'Map.d', 'Layer.d', 'Point.d', 'VectorRenderer.d', 'LocationT.d', 'Marker.d', 'LicenseSh.d', 'Viewport.d', 'MapSource.d', 'DataSource.d', 'SimpleMap.d', 'MapSourceRegistry.d', 'MarkerLayer.d', 'Tile.d', 'Compass.d', 'TileDownloader.d', 'Scale.d', 'LocationIF.d', 'MemoryCache.d', 'PathLayer.d', 'RasterRenderer.d', 'c/types.d', 'c/functions.d'], install_dir: 'include/d/gtk_d')